2002-05-22  Ray Tomlinson  <RTomlinson@bbn.com>

	* ServiceUserPlugin.java:
	Remove debug.

	* DefaultPluginBinder.java:
	Change getPlugin to getComponent in toString() to eliminate
	exceptions when the binder is not binding a plugin. For example,
	when it binds a servlet component.

2002-05-09  Ray Tomlinson  <RTomlinson@bbn.com>

	* SimplifiedPlugin.java: 
	* SimplifiedFatPlugin.java: 
	* SimplePlugin.java: 
	Bug 1232
	Use closeTransactionDontReset

	* PluginDelegate.java: 
	Bug 1232
	Define closeTransactionDontReset.
	Deprecate closeTransaction(boolean);

	* PluginAdapter.java: 
	Bug 1232
	Use closeTransactionDontReset

2002-04-19  Ray Tomlinson  <RTomlinson@bbn.com>

	* ServiceUserPlugin.java:
	Fix javadoc @link items -- they cannot be folder across multiple
	lines.

2002-04-10  Ray Tomlinson  <RTomlinson@bbn.com>

	* ServiceUserPlugin.java: Base class for plugins using services
	that provided by other plugins. Supports waiting until all
	services are available before running.

	* ComponentPlugin.java:
	Set thread name to plugin name when running the plugin.

2002-03-21  Ray Tomlinson  <RTomlinson@bbn.com>

	* ComponentPlugin.java:
	Bug #1011 (CompenentPlugin invoked execute too often)
	Only call execute() if wasAwakened() or
	blackboard.haveCollectionsChanged(). This means that execute()
	will be called only if a client or internal signal happened or if
	an external signal was actually associated with a change to a
	subscription of the plugin. This is the same behavior implemented
	for SimplePlugin.

2001-11-02  Ray Tomlinson  <RTomlinson@bbn.com>

	* Node.java (Repository):
	Fix insertion point for agents.

	* FileInitializerServiceProvider.java (Repository):
	Fix interpretation of insertion point.

	* DBInitializerServiceProvider.java (Repository):
	Fix interpretation of insertion point.
	Change DBProperties api.

	* PluginManager.java (Repository):
	Get insertion point by calling specifyContainmentPoint();

2001-10-01  Ray Tomlinson  <RTomlinson@HEFEWEIZEN>