@@ -1,3 +1,10 @@
+2002-06-28  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* ServiceUserPlugin.java:
+	Bug #1540 -- Message could be more explanatory on setValue exception
+	Use LoggingServiceWithPrefix for logging to identify the agent in
+	every log message.
+
 2002-05-22  Ray Tomlinson  <RTomlinson@bbn.com>
 
 	* ServiceUserPlugin.java:
